Attempt to fix right container overflow not showing

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
   display: flex;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow-y: hidden;
 }
 
 .image-container {
@@ -61,7 +61,9 @@ img.fern {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  max-width: 700px;
+  min-width: 380px;
+  max-height: 100vh;
+  overflow: auto;
 }
 
 .right-container p {
@@ -69,6 +71,7 @@ img.fern {
   font-family: Roboto, Ubuntu, sans-serif ;
   font-weight: 500;
   margin: 30px 40px 10px;
+  max-width: 640px;
 }
 
 label {
